[package]
authors = ["yyxxryrx@outlook.com"]
name = "f-string"
version = "0.1.0"
description = "Python-like f-string formatting macros for Rust"
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"
repository = "https://github.com/yyxxryrx/f-string"
license = "MIT"
keywords = ["f-string", "formatting", "proc-macro"]
categories = ["text-processing", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
f-macro = ["dep:nom"]

[dependencies]
nom = { version = "8.0.0", optional = true }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[[example]]
name = "f_macro"
path = "examples/f_basic.rs"
required-features = ["f-macro"]

[[example]]
name = "t_macro"
path = "examples/t_basic.rs"

[[test]]
name = "t_macro"
path = "tests/t_macro.rs"